Add tests and fix existing tests